# NBAdexxxxx

./: .replit  backup.sql  pyproject.toml  replit.md
attached_assets/: Pasted-u-just-have-to-clone-it-and-make-it-NBAdex-collectibles-will-be-nba-I-want-u-to-clone-it-as-is-and-j-1763927756363_1763927756364.txt
nbadex/admin_panel/admin_panel/: admin.py  apps.py  models.py
nbadex/admin_panel/admin_panel/settings/: base.py
nbadex/admin_panel/bd_models/: models.py
nbadex/admin_panel/bd_models/admin/: __init__.py  ball.py  coinreward.py  cointransaction.py  economy.py  pack.py  packreward.py
nbadex/admin_panel/bd_models/migrations/: 0010_coinreward_cointransaction_pack_packcontent_and_more.py  0010_pack_player_coins_cointransaction.py  0010_pack_player_coins_packreward_playerpack.py
nbadex/ballsdex/: __main__.py  settings.py
nbadex/ballsdex/core/: models.py
nbadex/ballsdex/core/utils/: utils.py
nbadex/migration_scripts/: 01_economy.sql  02_regime.sql  ball.csv  blacklistedid.csv  economy.csv  export_data.py  guildconfig.csv  player.csv  regime.csv  special.csv
scripts/: daily_backup.sh
