[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "cachetools==6.1.0",
    "discord-py[speed]==2.6.3",
    "dj-database-url==2.3.0",
    "django==5.2.8",
    "django-admin-action-forms==1.3.0",
    "django-admin-autocomplete-filter==0.7.1",
    "django-admin-inline-paginator==0.4.0",
    "django-allow-cidr>=0.8.0",
    "django-nonrelated-inlines==0.2",
    "gunicorn>=23.0.0",
    "pillow==11.3.0",
    "prometheus-client==0.22.1",
    "psycopg==3.2.9",
    "psycopg-binary==3.2.9",
    "python-dateutil==2.9.0",
    "pyyaml==6.0.2",
    "rich==14.0.0",
    "sentry-sdk[asyncpg]==2.33.0",
    "social-auth-app-django==5.5.1",
    "tortoise-cli==0.1.2",
    "tortoise-orm[asyncpg]==0.25.1",
    "uvicorn[standard]==0.35.0",
    "whitenoise>=6.11.0",
]
